         - an OSD message is shown when an "After Playback" action is selected.
NEW    : Ticket #1627, Ope the file's directory from the clip properties
        (by double clicking on it)
CHANGED: Updated Belarusian, Chinese (simplified and traditional), Czech, Dutch, French,
         German, Hebrew, Japanese, Polish, Russian, Slovakian, Ukrainian translations
CHANGED: Updated libogg to v1.3.0
CHANGED: Updated SoundTouch to v1.6.1pre r130
CHANGED: Updated VirtualDub to v1.10.1-test11
CHANGED: Updated MediaInfoLib to v0.7.48
CHANGED: Updated ZenLib to v0.4.21
FIXED  : If "Play # time(s)" was set to a value higher than one and if the playlist
         had more than one element, the playback never stopped.
FIXED  : If the playlist had only invalid elements, the player would try to
         open the last element forever. If at least one element was invalid,
         the "Play # time(s)" setting would be ignored and the playlist would
         be repeated forever.
FIXED  : Ticket #19, AviSplitter: fixed detection of absolute chunk addressing
FIXED  : Ticket #53/#1666, [OGG] splitter fails for latest Theora videos
FIXED  : Ticket #311, High dpi awareness
FIXED  : Ticket #970, "Always load external subtitles" fails if the subtitles
         filename contains LANG postfix
FIXED  : Ticket #1166, Playlist was erased by pressing the "Close" (default Ctrl+C)
FIXED  : Ticket #1427, Add the ability to use different mouse button bindings
         in windowed and fullscreen modes
FIXED  : Ticket #1467, "Save Image" was sometimes skipping some frames
FIXED  : Ticket #1519, Crackling/stuttering audio in some DTS for SPDIF output
FIXED  : Ticket #1552, Fix the DVD angle display in the information panel (Ctrl+3)
FIXED  : Ticket #1553, Fix display for DVD tracks without language information:
         the tracks were incorrectly numbered in the menu and the current OS
         language was displayed instead of "Unknown" in the informations panel
         and OSD messages